# worktrunk

./: .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.yaml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/pr-review/: SKILL.md
.config/: lychee.toml  nextest.toml  wt.toml
.github/: CLAUDE.md
.github/workflows/: ci.yaml  claude-ci-fix.yaml  claude-issue-triage.yaml  claude-mention.yaml  claude-nightly-cleaner.yaml  claude-nightly-review-reviewers.yaml  claude-renovate.yaml  claude-review.yaml  nightly-benchmark.yaml  publish-docs.yaml  release.yaml  tend-ci-fix.yaml  tend-mention.yaml  tend-nightly.yaml  tend-notifications.yaml  tend-review-runs.yaml  tend-review.yaml  tend-triage.yaml  tend-weekly.yaml
.skogai/: install.sh
benches/: CLAUDE.md  alias.rs  completion.rs  cow_copy.rs  list.rs  remove.rs  time_to_first_output.rs
dev/: config.example.toml  wt.example.toml
docs/: CLAUDE.md
docs/content/: claude-code.md  config.md  extending.md  faq.md  hook.md  list.md  llm-commits.md  merge.md  remove.md  step.md  switch.md  tips-patterns.md  worktrunk.md
docs/demos/: CLAUDE.md  build
nix/: home-manager-module.nix
skills/worktrunk/: SKILL.md
src/: cache_dir.rs  command_log.rs  completion.rs  copy.rs  copy_progress.rs  docs.rs  help.rs  help_pager.rs  lib.rs  llm.rs  main.rs  md_help.rs  path.rs  shell_exec.rs  summary.rs  testing.rs
src/cli/: config.rs  hook.rs  mod.rs  step.rs
src/commands/: alias.rs  command_approval.rs  command_executor.rs  commit.rs  configure_shell.rs  context.rs  eval.rs  external.rs  for_each.rs  handle_switch.rs  hook_commands.rs  hooks.rs  merge.rs  mod.rs  pipeline_spec.rs  process.rs  project_config.rs  relocate.rs  repository_ext.rs  run_pipeline.rs  statusline.rs  step_commands.rs
src/config/: commands.rs  deprecation.rs  expansion.rs  hooks.rs  mod.rs  project.rs  test.rs  unknown_tree.rs
src/git/: error.rs  mod.rs  recover.rs  remove.rs  url.rs
src/output/: commit_generation.rs  concurrent.rs  global.rs  handlers.rs
src/styling/: hyperlink.rs  mod.rs
src/testing/: mod.rs
templates/: nushell.nu
tests/: CLAUDE.md
tests/common/: mod.rs  progressive_output.rs
tests/integration_tests/: approval_pty.rs  approval_ui.rs  approvals.rs  bare_repository.rs  completion.rs  config_init.rs  config_show.rs  config_state.rs  config_update_pty.rs  default_branch.rs  e2e_shell_post_create.rs  e2e_shell_post_start.rs  eval.rs  external.rs  for_each.rs  git_error_display.rs  help.rs  hook_show.rs  list.rs  list_config.rs  merge.rs  mod.rs  output_system_guard.rs  post_create_commands.rs  post_start_commands.rs  push.rs  readme_sync.rs  remove.rs  repository.rs  select_config.rs  shell_wrapper.rs  statusline.rs  step_alias.rs  step_copy_ignored.rs  step_promote.rs  step_prune.rs  step_relocate.rs  switch.rs  switch_picker.rs  user_hooks.rs
tests/snapshots/: integration__integration_tests__approval_pty__approval_prompt_accept.snap  integration__integration_tests__approval_pty__approval_prompt_decline.snap  integration__integration_tests__approval_pty__approval_prompt_mixed_approved_unapproved_accept.snap  integration__integration_tests__approval_pty__approval_prompt_mixed_approved_unapproved_decline.snap  integration__integration_tests__approval_pty__approval_prompt_multiple_commands.snap  integration__integration_tests__approval_pty__approval_prompt_named_commands.snap  integration__integration_tests__approval_pty__approval_prompt_permission_error.snap  integration__integration_tests__approval_ui__already_approved_skip_prompt.snap  integration__integration_tests__approval_ui__approval_fails_in_non_tty.snap  integration__integration_tests__approval_ui__approval_multiple_commands.snap  integration__integration_tests__approval_ui__approval_named_commands.snap  integration__integration_tests__approval_ui__approval_single_command.snap  integration__integration_tests__approval_ui__decline_approval_skips_only_unapproved.snap  integration__integration_tests__approval_ui__step_hook_name_filter_on_unnamed.snap  integration__integration_tests__approval_ui__step_hook_unknown_name_error.snap  integration__integration_tests__approval_ui__user_prefix_skips_approval.snap  integration__integration_tests__approval_ui__yes_bypasses_tty_check.snap  integration__integration_tests__approval_ui__yes_does_not_save_approvals_first_run.snap  integration__integration_tests__approval_ui__yes_does_not_save_approvals_second_run.snap  integration__integration_tests__approvals__add_approvals_all_already_approved.snap  integration__integration_tests__approvals__add_approvals_all_none_approved.snap  integration__integration_tests__approvals__add_approvals_bare_repo_config_in_primary_worktree.snap  integration__integration_tests__approvals__add_approvals_no_commands.snap  integration__integration_tests__approvals__add_approvals_no_config.snap  integration__integration_tests__approvals__clear_approvals_global_no_approvals.snap  integration__integration_tests__approvals__clear_approvals_global_with_approvals.snap  integration__integration_tests__approvals__clear_approvals_legacy_config_storage.snap  integration__integration_tests__approvals__clear_approvals_multiple_approvals.snap  integration__integration_tests__approvals__clear_approvals_with_approvals.snap  integration__integration_tests__bare_repository__bare_repo_commands_from_bare_directory.snap  integration__integration_tests__bare_repository__bare_repo_identifies_primary_correctly.snap  integration__integration_tests__bare_repository__bare_repo_list_shows_no_bare_entry.snap  integration__integration_tests__bare_repository__bare_repo_list_worktrees.snap  integration__integration_tests__bare_repository__bare_repo_prompt_pty__bare_repo_prompt_accept.snap  integration__integration_tests__bare_repository__bare_repo_prompt_pty__bare_repo_prompt_decline.snap  integration__integration_tests__bare_repository__bare_repo_prompt_pty__bare_repo_prompt_preview.snap  integration__integration_tests__bare_repository__bare_repo_worktree_path_prompt_auto_accept.snap  (+775 more)
(+99 files in other folders)
